OUTPUT.md: add mermaid